--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "@types/js-yaml": "^4.0.0",
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "^14.14.37",
+    "@types/react": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "arg": "^5.0.0",
