--- a/test/parser/__snapshots__/class.test.ts.yml
+++ b/test/parser/__snapshots__/class.test.ts.yml
@@ -273,11 +273,20 @@ Tools / parse alias / parse alias / 0: |-
 Tools / parse bad class / bad classes / 0: |-
   [
     {
-      "raw": "css`height:calc-(100",
+      "raw": "css",
       "start": 0,
+      "end": 3,
+      "variants": [],
+      "content": "css",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": "height:calc-(100",
+      "start": 4,
       "end": 20,
       "variants": [],
-      "content": "css`height:calc-(100",
+      "content": "height:calc-(100",
       "type": "utility",
       "important": false
     },
@@ -332,6 +341,72 @@ Tools / parse bad class / bad classes / 0: |-
       "end": 94,
       "variants": [],
       "content": "height:calc-(100)",
+      "type": "utility",
+      "important": false
+    }
+  ]
+Tools / parse bad class with quotes / bad classes / 0: |-
+  [
+    {
+      "raw": "${",
+      "start": 0,
+      "end": 2,
+      "variants": [],
+      "content": "${",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": "active",
+      "start": 3,
+      "end": 9,
+      "variants": [],
+      "content": "active",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": "?",
+      "start": 10,
+      "end": 11,
+      "variants": [],
+      "content": "?",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": "text-green-400",
+      "start": 13,
+      "end": 27,
+      "variants": [],
+      "content": "text-green-400",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": ":",
+      "start": 29,
+      "end": 30,
+      "variants": [],
+      "content": ":",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": "text-orange-400",
+      "start": 32,
+      "end": 47,
+      "variants": [],
+      "content": "text-orange-400",
+      "type": "utility",
+      "important": false
+    },
+    {
+      "raw": "}",
+      "start": 49,
+      "end": 50,
+      "variants": [],
+      "content": "}",
       "type": "utility",
       "important": false
     }
