--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -188,8 +188,8 @@ Tools / interpret square brackets / square brackets / 0: |-
   }
   .space-x-\[calc\(20\%-1cm\)\] > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
-    margin-right: calc(calc(20%-1cm) * var(--tw-space-x-reverse));
-    margin-left: calc(calc(20%-1cm) * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc(calc(20% - 1cm) * var(--tw-space-x-reverse));
+    margin-left: calc(calc(20% - 1cm) * calc(1 - var(--tw-space-x-reverse)));
   }
   .bg-\[\#234\] {
     --tw-bg-opacity: 1;
@@ -284,7 +284,7 @@ Tools / interpret square brackets / square brackets / 0: |-
     height: 3.23rem;
   }
   .h-\[calc\(100\%\+1rem\)\] {
-    height: calc(100%+1rem);
+    height: calc(100% + 1rem);
   }
   .h-\[var\(--width\)\] {
     height: var(--width);
@@ -332,7 +332,7 @@ Tools / interpret square brackets / square brackets / 0: |-
     max-height: 3.23rem;
   }
   .max-h-\[calc\(100\%\+1rem\)\] {
-    max-height: calc(100%+1rem);
+    max-height: calc(100% + 1rem);
   }
   .max-h-\[var\(--width\)\] {
     max-height: var(--width);
@@ -341,7 +341,7 @@ Tools / interpret square brackets / square brackets / 0: |-
     max-width: 3.23rem;
   }
   .max-w-\[calc\(100\%\+1rem\)\] {
-    max-width: calc(100%+1rem);
+    max-width: calc(100% + 1rem);
   }
   .max-w-\[var\(--width\)\] {
     max-width: var(--width);
@@ -350,7 +350,7 @@ Tools / interpret square brackets / square brackets / 0: |-
     min-height: 3.23rem;
   }
   .min-h-\[calc\(100\%\+1rem\)\] {
-    min-height: calc(100%+1rem);
+    min-height: calc(100% + 1rem);
   }
   .min-h-\[var\(--width\)\] {
     min-height: var(--width);
@@ -359,7 +359,7 @@ Tools / interpret square brackets / square brackets / 0: |-
     min-width: 3.23rem;
   }
   .min-w-\[calc\(100\%\+1rem\)\] {
-    min-width: calc(100%+1rem);
+    min-width: calc(100% + 1rem);
   }
   .min-w-\[var\(--width\)\] {
     min-width: var(--width);
@@ -477,10 +477,19 @@ Tools / interpret square brackets / square brackets / 0: |-
     width: 3.23rem;
   }
   .w-\[calc\(100\%\+1rem\)\] {
-    width: calc(100%+1rem);
+    width: calc(100% + 1rem);
   }
   .w-\[var\(--width\)\] {
     width: var(--width);
+  }
+  .w-\[calc\(var\(--10-10px\2c calc\(-20px-\(-30px--40px\)\)\)-50px\)\] {
+    width: calc(var(--10-10px,calc(-20px - (-30px - -40px))) - 50px);
+  }
+  .w-\[calc\(var\(--10-10px\)\+20px\)\] {
+    width: calc(var(--10-10px) + 20px);
+  }
+  .w-\[calc\(var\(--test\)\+1px\)\] {
+    width: calc(var(--test) + 1px);
   }
   .gap-\[4rem\] {
     grid-gap: 4rem;
