feat: export sky palette in default colors (closes #425) (#426)

--- a/test/plugin/__snapshots__/typography.test.ts.yml
+++ b/test/plugin/__snapshots__/typography.test.ts.yml
@@ -24,6 +24,7 @@ Tools / add completions / completions / 0: |-
       "prose-lime",
       "prose-amber",
       "prose-orange",
+      "prose-sky",
       "prose-light-blue",
       "prose-warm-gray",
       "prose-true-gray",
