--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -194,6 +194,16 @@ Tools / completions / color / 2: |-
     "text-orange-700",
     "text-orange-800",
     "text-orange-900",
+    "text-sky-50",
+    "text-sky-100",
+    "text-sky-200",
+    "text-sky-300",
+    "text-sky-400",
+    "text-sky-500",
+    "text-sky-600",
+    "text-sky-700",
+    "text-sky-800",
+    "text-sky-900",
     "text-light-blue-50",
     "text-light-blue-100",
     "text-light-blue-200",
@@ -438,6 +448,16 @@ Tools / completions / color / 2: |-
     "placeholder-orange-700",
     "placeholder-orange-800",
     "placeholder-orange-900",
+    "placeholder-sky-50",
+    "placeholder-sky-100",
+    "placeholder-sky-200",
+    "placeholder-sky-300",
+    "placeholder-sky-400",
+    "placeholder-sky-500",
+    "placeholder-sky-600",
+    "placeholder-sky-700",
+    "placeholder-sky-800",
+    "placeholder-sky-900",
     "placeholder-light-blue-50",
     "placeholder-light-blue-100",
     "placeholder-light-blue-200",
@@ -682,6 +702,16 @@ Tools / completions / color / 2: |-
     "bg-orange-700",
     "bg-orange-800",
     "bg-orange-900",
+    "bg-sky-50",
+    "bg-sky-100",
+    "bg-sky-200",
+    "bg-sky-300",
+    "bg-sky-400",
+    "bg-sky-500",
+    "bg-sky-600",
+    "bg-sky-700",
+    "bg-sky-800",
+    "bg-sky-900",
     "bg-light-blue-50",
     "bg-light-blue-100",
     "bg-light-blue-200",
@@ -926,6 +956,16 @@ Tools / completions / color / 2: |-
     "from-orange-700",
     "from-orange-800",
     "from-orange-900",
+    "from-sky-50",
+    "from-sky-100",
+    "from-sky-200",
+    "from-sky-300",
+    "from-sky-400",
+    "from-sky-500",
+    "from-sky-600",
+    "from-sky-700",
+    "from-sky-800",
+    "from-sky-900",
     "from-light-blue-50",
     "from-light-blue-100",
     "from-light-blue-200",
@@ -1170,6 +1210,16 @@ Tools / completions / color / 2: |-
     "via-orange-700",
     "via-orange-800",
     "via-orange-900",
+    "via-sky-50",
+    "via-sky-100",
+    "via-sky-200",
+    "via-sky-300",
+    "via-sky-400",
+    "via-sky-500",
+    "via-sky-600",
+    "via-sky-700",
+    "via-sky-800",
+    "via-sky-900",
     "via-light-blue-50",
     "via-light-blue-100",
     "via-light-blue-200",
@@ -1414,6 +1464,16 @@ Tools / completions / color / 2: |-
     "to-orange-700",
     "to-orange-800",
     "to-orange-900",
+    "to-sky-50",
+    "to-sky-100",
+    "to-sky-200",
+    "to-sky-300",
+    "to-sky-400",
+    "to-sky-500",
+    "to-sky-600",
+    "to-sky-700",
+    "to-sky-800",
+    "to-sky-900",
     "to-light-blue-50",
     "to-light-blue-100",
     "to-light-blue-200",
@@ -1658,6 +1718,16 @@ Tools / completions / color / 2: |-
     "border-orange-700",
     "border-orange-800",
     "border-orange-900",
+    "border-sky-50",
+    "border-sky-100",
+    "border-sky-200",
+    "border-sky-300",
+    "border-sky-400",
+    "border-sky-500",
+    "border-sky-600",
+    "border-sky-700",
+    "border-sky-800",
+    "border-sky-900",
     "border-light-blue-50",
     "border-light-blue-100",
     "border-light-blue-200",
@@ -1902,6 +1972,16 @@ Tools / completions / color / 2: |-
     "divide-orange-700",
     "divide-orange-800",
     "divide-orange-900",
+    "divide-sky-50",
+    "divide-sky-100",
+    "divide-sky-200",
+    "divide-sky-300",
+    "divide-sky-400",
+    "divide-sky-500",
+    "divide-sky-600",
+    "divide-sky-700",
+    "divide-sky-800",
+    "divide-sky-900",
     "divide-light-blue-50",
     "divide-light-blue-100",
     "divide-light-blue-200",
@@ -2146,6 +2226,16 @@ Tools / completions / color / 2: |-
     "ring-offset-orange-700",
     "ring-offset-orange-800",
     "ring-offset-orange-900",
+    "ring-offset-sky-50",
+    "ring-offset-sky-100",
+    "ring-offset-sky-200",
+    "ring-offset-sky-300",
+    "ring-offset-sky-400",
+    "ring-offset-sky-500",
+    "ring-offset-sky-600",
+    "ring-offset-sky-700",
+    "ring-offset-sky-800",
+    "ring-offset-sky-900",
     "ring-offset-light-blue-50",
     "ring-offset-light-blue-100",
     "ring-offset-light-blue-200",
@@ -2390,6 +2480,16 @@ Tools / completions / color / 2: |-
     "ring-orange-700",
     "ring-orange-800",
     "ring-orange-900",
+    "ring-sky-50",
+    "ring-sky-100",
+    "ring-sky-200",
+    "ring-sky-300",
+    "ring-sky-400",
+    "ring-sky-500",
+    "ring-sky-600",
+    "ring-sky-700",
+    "ring-sky-800",
+    "ring-sky-900",
     "ring-light-blue-50",
     "ring-light-blue-100",
     "ring-light-blue-200",
@@ -2634,6 +2734,16 @@ Tools / completions / color / 2: |-
     "outline-orange-700",
     "outline-orange-800",
     "outline-orange-900",
+    "outline-sky-50",
+    "outline-sky-100",
+    "outline-sky-200",
+    "outline-sky-300",
+    "outline-sky-400",
+    "outline-sky-500",
+    "outline-sky-600",
+    "outline-sky-700",
+    "outline-sky-800",
+    "outline-sky-900",
     "outline-light-blue-50",
     "outline-light-blue-100",
     "outline-light-blue-200",
@@ -2878,6 +2988,16 @@ Tools / completions / color / 2: |-
     "outline-solid-orange-700",
     "outline-solid-orange-800",
     "outline-solid-orange-900",
+    "outline-solid-sky-50",
+    "outline-solid-sky-100",
+    "outline-solid-sky-200",
+    "outline-solid-sky-300",
+    "outline-solid-sky-400",
+    "outline-solid-sky-500",
+    "outline-solid-sky-600",
+    "outline-solid-sky-700",
+    "outline-solid-sky-800",
+    "outline-solid-sky-900",
     "outline-solid-light-blue-50",
     "outline-solid-light-blue-100",
     "outline-solid-light-blue-200",
@@ -3122,6 +3242,16 @@ Tools / completions / color / 2: |-
     "outline-dotted-orange-700",
     "outline-dotted-orange-800",
     "outline-dotted-orange-900",
+    "outline-dotted-sky-50",
+    "outline-dotted-sky-100",
+    "outline-dotted-sky-200",
+    "outline-dotted-sky-300",
+    "outline-dotted-sky-400",
+    "outline-dotted-sky-500",
+    "outline-dotted-sky-600",
+    "outline-dotted-sky-700",
+    "outline-dotted-sky-800",
+    "outline-dotted-sky-900",
     "outline-dotted-light-blue-50",
     "outline-dotted-light-blue-100",
     "outline-dotted-light-blue-200",
@@ -3366,6 +3496,16 @@ Tools / completions / color / 2: |-
     "fill-orange-700",
     "fill-orange-800",
     "fill-orange-900",
+    "fill-sky-50",
+    "fill-sky-100",
+    "fill-sky-200",
+    "fill-sky-300",
+    "fill-sky-400",
+    "fill-sky-500",
+    "fill-sky-600",
+    "fill-sky-700",
+    "fill-sky-800",
+    "fill-sky-900",
     "fill-light-blue-50",
     "fill-light-blue-100",
     "fill-light-blue-200",
@@ -3611,6 +3751,16 @@ Tools / completions / color / 2: |-
     "stroke-orange-700",
     "stroke-orange-800",
     "stroke-orange-900",
+    "stroke-sky-50",
+    "stroke-sky-100",
+    "stroke-sky-200",
+    "stroke-sky-300",
+    "stroke-sky-400",
+    "stroke-sky-500",
+    "stroke-sky-600",
+    "stroke-sky-700",
+    "stroke-sky-800",
+    "stroke-sky-900",
     "stroke-light-blue-50",
     "stroke-light-blue-100",
     "stroke-light-blue-200",
